export interface WarehouseUser {
    user_id:number;
    warehouse_id:number;
}