// Database schema generated from current source code and migrations.
// DBMS: MySQL via knex + mysql2.
// Important enum values:
// users.is_active: 1 ACTIVE, 0 IN_ACTIVE
// warehouse_asset.status and asset_transaction_items.status: 1 GOOD, 2 BROKEN, 3 MAINTENANCE, 4 EXPIRED
// asset_transactions.type: 1 ALLOCATION_RETURN, 2 DISPOSAL, 3 IMPORT, 4 EXPORT, 5 MAINTENANCE
// asset_maintenances.status: 0 IN_PROGRESS, 1 COMPLETED
// advisor_requests.type: 1 allocation, 2 recall, 4 other
// advisor_requests.status: 0 pending, 1 approved, 2 rejected

Table users {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  phone_number varchar(255)
  avatar_url varchar(255)
  address varchar(255)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  failed_login_attempts int [not null, default: 0]
  last_failed_login_at datetime
  is_active boolean [default: 1]
  role_id int
  class_id int
  major_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table roles {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [not null, unique]
  description varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table permissions {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [not null, unique]
  description varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table role_permission {
  role_id int [not null]
  permission_id int [not null]

  indexes {
    (role_id, permission_id) [pk]
  }
}

Table majors {
  id int [pk, increment]
  name varchar(255) [not null]
  code varchar(255) [not null, unique]
  description text
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table classes {
  id int [pk, increment]
  major_id int [not null]
  name varchar(255) [not null]
  code varchar(255) [not null, unique]
  description text
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table students {
  id int [pk, increment]
  class_id int [not null]
  student_code varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  phone_number varchar(255)
  is_active boolean [default: true]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table categories {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [not null, unique]
  description varchar(255)
  color varchar(255) [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table assets {
  id int [pk, increment]
  name varchar(255) [not null]
  code varchar(255) [unique]
  description varchar(255)
  image_url varchar(255)
  category_id int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table address {
  id bigint [pk, increment]
  address_detail varchar(255) [not null]
  latitude decimal(10,7)
  longitude decimal(10,7)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouses {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [unique]
  address_id bigint
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouse_user {
  user_id int [not null]
  warehouse_id int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime

  indexes {
    (user_id, warehouse_id) [pk]
  }
}

Table warehouse_asset {
  id int [pk, increment]
  asset_id int [not null]
  warehouse_id int [not null]
  quantity int [default: 0]
  maintenance_due datetime [default: `now()`]
  status int [default: 1]
  batch_code varchar(255) [not null, unique]
  expiration_date datetime [default: `now()`]
  manufacture_date datetime [default: `now()`]
  cost int [default: 0]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table asset_transactions {
  id int [pk, increment]
  code varchar(255) [not null, unique]
  name varchar(255) [not null]
  warehouse_id int
  type int [not null]
  note varchar(255)
  reason varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_imports {
  id int [pk, increment]
  transaction_id int
  received_date timestamp [not null]
  sender_location varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_exports {
  id int [pk, increment]
  transaction_id int
  export_date timestamp [not null]
  receiver_name varchar(255) [not null]
  receiver_phone varchar(255)
  receiver_address varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_transaction_items {
  id int [pk, increment]
  transaction_id int
  warehouse_asset_id int
  quantity int [not null]
  cost int
  status int [not null, default: 1]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_lifecycle {
  id int [pk, increment]
  transaction_id int
  allocation_date timestamp
  return_deadline timestamp
  receiver_id int
  return_date date
  disposal_date date
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_maintenances {
  id int [pk, increment]
  transaction_id int
  maintenance_date date [not null]
  status int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table advisor_requests {
  id int [pk, increment]
  advisor_id int [not null]
  class_id int
  student_id int
  asset_id int
  quantity int
  type int [not null]
  status int [not null, default: 0]
  note text
  response_note text
  processed_by_user_id int
  allocation_transaction_code varchar(255) [note: 'Business relation to asset_transactions.code, no physical FK in migration']
  warehouse_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

Table log_actions {
  id bigint [pk, increment]
  name varchar(50) [not null]
  code varchar(50) [not null, unique]
  description varchar(255)
}

Table log_controllers {
  id bigint [pk, increment]
  name varchar(50) [not null]
  code varchar(100) [not null, unique]
  description varchar(255)
}

Table kqn_logs {
  id bigint [pk, increment]
  created_at timestamp [not null, default: `now()`]
  username varchar(100) [not null]
  action_id bigint [not null]
  controller_id bigint
  ip varchar(45)
  url varchar(500)
  data json
  edit_changes json
}

Table administrative_units {
  id int [pk]
  full_name varchar(255)
  full_name_en varchar(255)
  short_name varchar(255)
  short_name_en varchar(255)
  code_name varchar(255)
  code_name_en varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table provinces {
  code varchar(20) [pk]
  name varchar(255) [not null]
  name_en varchar(255)
  full_name varchar(255) [not null]
  full_name_en varchar(255)
  code_name varchar(255)
  administrative_unit_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime

  indexes {
    administrative_unit_id [name: 'idx_provinces_unit']
  }
}

Table wards {
  code varchar(20) [pk]
  name varchar(255) [not null]
  name_en varchar(255)
  full_name varchar(255)
  full_name_en varchar(255)
  code_name varchar(255)
  province_code varchar(20)
  administrative_unit_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime

  indexes {
    province_code [name: 'idx_wards_province']
    administrative_unit_id [name: 'idx_wards_unit']
  }
}

Ref: users.role_id > roles.id [delete: set null]
Ref: users.class_id > classes.id [delete: set null]
Ref: users.major_id > majors.id [delete: set null]
Ref: users.created_by_user_id > users.id [delete: set null]
Ref: users.modified_by_user_id > users.id [delete: set null]
Ref: users.deleted_by_user_id > users.id [delete: set null]
Ref: roles.created_by_user_id > users.id [delete: set null]
Ref: roles.modified_by_user_id > users.id [delete: set null]
Ref: roles.deleted_by_user_id > users.id [delete: set null]
Ref: permissions.created_by_user_id > users.id [delete: set null]
Ref: permissions.modified_by_user_id > users.id [delete: set null]
Ref: permissions.deleted_by_user_id > users.id [delete: set null]
Ref: role_permission.role_id > roles.id [delete: cascade]
Ref: role_permission.permission_id > permissions.id [delete: cascade]
Ref: classes.major_id > majors.id [delete: cascade]
Ref: students.class_id > classes.id [delete: cascade]
Ref: categories.created_by_user_id > users.id [delete: set null]
Ref: categories.modified_by_user_id > users.id [delete: set null]
Ref: categories.deleted_by_user_id > users.id [delete: set null]
Ref: assets.category_id > categories.id [delete: restrict]
Ref: assets.created_by_user_id > users.id [delete: set null]
Ref: assets.modified_by_user_id > users.id [delete: set null]
Ref: assets.deleted_by_user_id > users.id [delete: set null]
Ref: address.created_by_user_id > users.id [delete: set null]
Ref: address.modified_by_user_id > users.id [delete: set null]
Ref: address.deleted_by_user_id > users.id [delete: set null]
Ref: warehouses.address_id > address.id [delete: set null]
Ref: warehouses.created_by_user_id > users.id [delete: set null]
Ref: warehouses.modified_by_user_id > users.id [delete: set null]
Ref: warehouses.deleted_by_user_id > users.id [delete: set null]
Ref: warehouse_user.user_id > users.id [delete: cascade]
Ref: warehouse_user.warehouse_id > warehouses.id [delete: cascade]
Ref: warehouse_user.created_by_user_id > users.id [delete: set null]
Ref: warehouse_user.modified_by_user_id > users.id [delete: set null]
Ref: warehouse_user.deleted_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.asset_id > assets.id [delete: cascade]
Ref: warehouse_asset.warehouse_id > warehouses.id [delete: cascade]
Ref: warehouse_asset.created_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.modified_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.deleted_by_user_id > users.id [delete: set null]
Ref: asset_transactions.warehouse_id > warehouses.id [delete: set null]
Ref: asset_transactions.created_by_user_id > users.id [delete: set null]
Ref: asset_transactions.modified_by_user_id > users.id [delete: set null]
Ref: asset_transactions.deleted_by_user_id > users.id [delete: set null]
Ref: asset_imports.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_imports.created_by_user_id > users.id [delete: set null]
Ref: asset_imports.modified_by_user_id > users.id [delete: set null]
Ref: asset_imports.deleted_by_user_id > users.id [delete: set null]
Ref: asset_exports.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_exports.created_by_user_id > users.id [delete: set null]
Ref: asset_exports.modified_by_user_id > users.id [delete: set null]
Ref: asset_exports.deleted_by_user_id > users.id [delete: set null]
Ref: asset_transaction_items.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_transaction_items.warehouse_asset_id > warehouse_asset.id [delete: cascade]
Ref: asset_transaction_items.created_by_user_id > users.id [delete: set null]
Ref: asset_transaction_items.modified_by_user_id > users.id [delete: set null]
Ref: asset_transaction_items.deleted_by_user_id > users.id [delete: set null]
Ref: asset_lifecycle.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_lifecycle.receiver_id > users.id [delete: set null]
Ref: asset_lifecycle.created_by_user_id > users.id [delete: set null]
Ref: asset_lifecycle.modified_by_user_id > users.id [delete: set null]
Ref: asset_lifecycle.deleted_by_user_id > users.id [delete: set null]
Ref: asset_maintenances.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_maintenances.created_by_user_id > users.id [delete: set null]
Ref: asset_maintenances.modified_by_user_id > users.id [delete: set null]
Ref: asset_maintenances.deleted_by_user_id > users.id [delete: set null]
Ref: advisor_requests.advisor_id > users.id [delete: cascade]
Ref: advisor_requests.class_id > classes.id [delete: set null]
Ref: advisor_requests.student_id > students.id [delete: set null]
Ref: advisor_requests.asset_id > assets.id [delete: set null]
Ref: advisor_requests.processed_by_user_id > users.id [delete: set null]
Ref: advisor_requests.warehouse_id > warehouses.id [delete: set null]
Ref: kqn_logs.action_id > log_actions.id [delete: cascade]
Ref: kqn_logs.controller_id > log_controllers.id [delete: set null]
Ref: provinces.administrative_unit_id > administrative_units.id [delete: set null]
Ref: wards.province_code > provinces.code [delete: set null]
Ref: wards.administrative_unit_id > administrative_units.id [delete: set null]
// Business-only relation used by service/query, not enforced as FK:
// advisor_requests.allocation_transaction_code -> asset_transactions.code

